Minimum for doc build
Signed-off-by: Matthew Ballance <matt.ballance@gmail.com>

--- a/ivpm.yaml
+++ b/ivpm.yaml
@@ -5,7 +5,11 @@ package:
 
   dep-sets:
   - name: default-dev
-    deps: []
+    deps: 
+    - name: sphinx
+      src: pypi
   - name: default
     deps: []
+
+
 
