Correct CI to enable release to PyPi
Signed-off-by: Matthew Ballance <matt.ballance@gmail.com>

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -37,7 +37,7 @@ jobs:
         branch: gh-pages
         folder: html
     - name: Publish to PyPi
-      if: startsWith(github.ref, 'refs/heads/master')
+      if: startsWith(github.ref, 'refs/heads/main')
       uses: pypa/gh-action-pypi-publish@release/v1
       with:
         user: __token__
